# iast

./: .gitignore  Plan2.md  README.md  package.json  pnpm-lock.yaml
apps/api/: package.json
apps/api/src/: index.ts
apps/api/src/config/: index.ts
apps/api/src/models/: user.ts
apps/api/src/routes/: auth.ts  history.ts  sessions.ts
apps/api/src/server/: app.ts
apps/api/src/services/: auth.ts  dynamodb.ts
apps/api/src/valkey/: client.ts
apps/web/: package.json
apps/web/src/: App.tsx  index.css  main.tsx
docs/: ARCHITECTURE.md  AWS_DEPLOYMENT.md  diagrams.md
gateway/: .coverage  .env.example  Dockerfile  pyproject.toml  requirements.txt
gateway/src/: __init__.py  app.py  cli.py
gateway/src/ast/: __init__.py  base.py  login.py
gateway/src/core/: __init__.py  channels.py  config.py
gateway/src/core/ast/: __init__.py  base.py  helpers.py  result.py
gateway/src/db/: client.py
gateway/src/models/: __init__.py  ast.py  data.py  error.py  parser.py  session.py  tn3270.py  types.py
gateway/src/services/: __init__.py  valkey.py
gateway/src/services/tn3270/: __init__.py  host.py  manager.py  renderer.py
gateway/tests/: __init__.py  test_app_main.py  test_ast_base.py  test_cli.py  test_core_channels.py  test_core_config.py  test_core_errors.py  test_core_init_exports.py  test_db_client.py  test_db_models.py  test_login_ast.py  test_models_all_messages.py  test_models_api.py  test_models_ast_factories.py  test_models_base.py  test_models_messages_extra.py  test_models_parser_extra.py  test_models_session_messages.py  test_models_simple_modules.py  test_models_tn3270.py  test_module_imports.py  test_package_init.py  test_services_host_extended.py  test_services_init.py  test_services_tn3270_init.py  test_tn3270_components.py  test_tn3270_manager.py  test_tn3270_manager_extended.py  test_valkey_client.py  test_valkey_client_extra.py
scripts/: dev-session.sh  dev.sh
(+36 files in other folders)
