[project]
name = "terminal-gateway"
version = "0.1.0"
description = "TN3270 Gateway for Terminal Monorepo"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.2",
    "ebcdic>=1.1.1",
    "coverage>=7.6.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "structlog>=25.5.0",
    "tnz>=0.6.3",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[project.scripts]
gateway = "src.app:main"
gateway-tests = "src.cli:run_tests"
gateway-coverage = "src.cli:run_coverage"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "C4", "SIM"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "Standard"
reportMissingTypeStubs = false

